# infotecs-cpp-task

./: CMakeLists.txt  README.md  docker-compose.yml
program1/: CMakeLists.txt  main.cpp
program2/: CMakeLists.txt  main.cpp
